# FinDoc-RAG-project

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
agent_docs/: architecture.md  evaluation.md  ingestion.md  retrieval-generation.md  testing-guide.md
config/: __init__.py  settings.py
data/eval/: failure_analysis.json  full_eval_result.json  manual_eval_result.json  manual_qa.json  report.md  synthetic_eval_result.json  synthetic_qa.json
scripts/: evaluate.py  export_chunks.py  ingest.py  validate_qa.py
src/: __init__.py
src/api/: main.py
src/embedding/: __init__.py  base.py  bge_m3.py
src/evaluation/: __init__.py  dataset.py  evaluator.py  experiment.py  report.py  testset_generator.py
src/generation/: __init__.py  llm_service.py  prompts.py  qa_chain.py
src/ingestion/: __init__.py  chunker.py  document_router.py  docx_parser.py  models.py  pdf_parser.py  pipeline.py  plain_text_parser.py  pptx_parser.py  xlsx_parser.py
src/retrieval/: __init__.py  rerank_retriever.py  reranker.py  retriever.py
src/routing/: __init__.py  models.py  query_classifier.py  query_router.py
src/storage/: __init__.py  doc_store.py  vector_store.py
src/utils/: company_resolver.py
tests/: IMPLEMENTATION_SUMMARY.md  README.md  test_chunker_fixes.py  test_comparison_two_step.py  test_defensive_check.py  test_embedding.py
tests/e2e/: test_complete_workflow.py
tests/integration/: conftest.py  test_api.py  test_api_router.py  test_evaluation_pipeline.py  test_evaluator_router.py  test_evaluator_separate_accuracy.py  test_ingestion_pipeline.py  test_qa_pipeline.py  test_retrieval_pipeline.py
tests/integration/fixtures/: README.md
tests/smoke/: conftest.py  test_chunker_fixes.py  test_company_resolver.py  test_comparison_two_step.py  test_filter_file.py  test_ragas_cols.py  test_reranker.py
tests/unit/: check_imports.py  test_document_router.py  test_qa_chain_router.py  test_query_classifier.py  test_query_router.py
