[project]
name = "findoc-rag"
version = "0.1.0"
description = "财务报表 RAG 问答系统"
requires-python = ">=3.12"
dependencies = [
    # --- Ingestion ---
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    # --- Chunking ---
    "llama-index-core>=0.14.0",
    # --- Embedding & Reranker ---
    "sentence-transformers>=3.0.0",
    # --- Storage ---
    "chromadb>=0.6.0",
    # --- API ---
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # --- LLM（OpenAI-compatible SDK，兼容 Kimi / Qwen）---
    "openai>=1.0.0",
    # --- Evaluation（Ragas + LangChain wrapper）---
    "ragas>=0.4,<0.5",
    "datasets>=2.14.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# 测试文件允许以下例外：
# E402 - 导入不在顶部（因sys.path.insert需要）
# E701 - 一行多个语句（冒烟测试中的简洁写法）
"tests/smoke/*" = ["E402", "E701"]
"tests/integration/test_evaluator_separate_accuracy.py" = ["E402"]
# 脚本文件允许E402（因需要优先设置sys.path或加载环境变量）
"scripts/*" = ["E402"]
"cli.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
